see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note


Validation errors fixed and cleanup of Help page.
23-Oct-2009 Andrew Eddie
 ! Working commit of adding permissions checks to admin com_users.

22-Oct-2009 Ron Severdia
^ Migrated Media Manager assets to main media directory.
# Validation errors fixed and cleanup of Help page.
^ Migrated User Manager assets to main media directory.

22-Oct-2009 Ian MacLennan
 # Finally found the problem with the progress bar, and fixed (com_media)
 # Implemented Type Filtering in uploader

21-Oct-2009 Andrew Eddie
 + Added language field to weblinks table.
 ^ Added permission checks to com_weblinks (with associated refactoring).
 ! Cleanup @access in docblocks; PHP5-ise functions.

21-Oct-2009 Ian MacLennan
 # Fixed start upload button to adjust to markup changes

20-Oct-2009 Ercan Ozkaya
 ^ Updated MooTools core to 1.2.4
 ^ Merged branch erdsiger (com_massmail is merged into com_users)

20-Oct-2009 Ian MacLennan
 # Fixed regression in flash uploader.

19-Oct-2009 Ron Severdia
# Fixed small bugs in Media Manager and validation errors

19-Oct-2009 Ian MacLennan
 # Fixed updated Uploader to reload Files frame

18-Oct-2009 Mark Dexter
# Fix problems in jos_menu, jos_categories sample data

18-Oct-2009 Ron Severdia
+ Version 0.1 of Austere template

17-Oct-2009 Ron Severdia
+ New icons, CSS

17-Oct-2009 Hannes Papenberg
# Fixed some bugs with the menu manager and modal windows
+ Added Article linker plugin for editors
^ Merged editor windows for article editing
^ Added/Fixed access field in newsfeeds
^ Moved com_messages links in admin menu to component menu
^ com_templates now uses codemirror to edit HTML
